# warehouse_project

./: README.md
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/config/: approach_params_real.yaml  approach_params_sim.yaml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: config.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
cartographer_slam/: setup.py
cartographer_slam/config/: cartographer_real.lua  cartographer_sim.lua  warehouse_map_real.yaml
cartographer_slam/launch/: cartographer.launch.py
cartographer_slam/rviz/: mapping.rviz
localization_server/: package.xml  setup.py
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml
localization_server/launch/: localization.launch.py
localization_server/localization_server/: initial_pose_pub.py
localization_server/rviz/: localization.rviz
map_server/: package.xml  setup.py
map_server/config/: warehouse_map_keepout_real.pgm  warehouse_map_keepout_real.yaml  warehouse_map_keepout_sim.pgm  warehouse_map_keepout_sim.yaml  warehouse_map_keepout_sim_1.pgm  warehouse_map_real.pgm  warehouse_map_sim.pgm  warehouse_map_sim.yaml
map_server/launch/: map_server.launch.py
map_server/rviz/: map_display.rviz
nav2_apps/: package.xml
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
path_planner_server/: package.xml  setup.py
path_planner_server/config/: bt_navigator_real.yaml  bt_navigator_sim.yaml  controller_real.yaml  controller_sim.yaml  filters.yaml  filters_real.yaml  navigate_w_replanning_and_recovery.xml  planner_real.yaml  planner_sim.yaml
path_planner_server/launch/: pathplanner.launch.py
path_planner_server/rviz/: pathplanning.rviz
